--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -179,6 +179,7 @@
     color: #fff;
     word-break: keep-all;
     text-align: center;
+    white-space: nowrap;
 }
 
 .description {
